@@ -9,7 +9,6 @@ import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.IOException;
 import java.io.PrintStream;
-import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -19,13 +18,13 @@ import java.util.stream.Stream;
 public class POJOHelper {
 
     private static String readLineByLine() {
-        String[] pathnameList = new File("target/generated-sources/").list();
+        String[] pathnameList = new File(Constants.generateSourcesDirectory + "/").list();
         StringBuilder contentBuilder = new StringBuilder();
 
         assert pathnameList != null;
         for (String pathname : pathnameList) {
             if (pathname.endsWith(".java")) {
-                try (Stream<String> stream = Files.lines(Paths.get("target/generated-sources/" + pathname), StandardCharsets.UTF_8)) {
+                try (Stream<String> stream = Files.lines(Paths.get(Constants.generateSourcesDirectory + "/" + pathname), StandardCharsets.UTF_8)) {
                     stream.forEach(s -> contentBuilder.append(s).append("\n"));
                 } catch (IOException e) {
                     e.printStackTrace();
@@ -36,7 +35,6 @@ public class POJOHelper {
                         .append("==============================================================").append("\n");
             }
         }
-
         return contentBuilder.toString();
     }
 
@@ -79,23 +77,16 @@ public class POJOHelper {
                 return SourceType.JSON;
             }
         };
-        URL source = new URL(new URL("file:"), "target/required.json");
-
-//        File appDir = new File(System.getProperty("user.dir"));
-//        URI uri = new URI(appDir.toURI()+"/target/required.json");
-//        // just to check if the file exists
-//        File file = new File(uri);
-//        System.out.println(file.exists());
-//        URL source = uri.toURL();
+        URL source = new URL(new URL("file:"), Constants.outputDirectory + "/required.json");
 
         SchemaMapper mapper = new SchemaMapper(new RuleFactory(config, new Jackson2Annotator(config), new SchemaStore()), new SchemaGenerator());
         mapper.generate(codeModel, "RootClass", "generated-sources", source);
-        codeModel.build(new File("target/"), new PrintStream(new ByteArrayOutputStream()));
+        codeModel.build(new File(Constants.outputDirectory + "/"), new PrintStream(new ByteArrayOutputStream()));
 
         return readLineByLine();
     }
 
     public void removeFiles() throws IOException {
-        FileUtils.cleanDirectory(new File("target/generated-sources/"));
+        FileUtils.cleanDirectory(new File(Constants.outputDirectory + "/"));
     }
 }
